Removed hidden features

--- a/components/2d_network.html
+++ b/components/2d_network.html
@@ -26,7 +26,7 @@
     <li class="nav-item">
       <a class="nav-link" id="network-tab" data-toggle="tab" href="#network-settings" role="tab" aria-controls="network-settings" aria-selected="false">Network</a>
     </li>
-    <li class="nav-item" style="display: none;">
+    <li class="nav-item">
       <a class="nav-link" id="polygons-tab" data-toggle="tab" href="#network-polygons-settings" role="tab" aria-controls="network-polygons-settings" aria-selected="false">Polygons</a>
     </li>
   </ul>
@@ -74,7 +74,7 @@
             </div>
           </div>
         </div>
-        <div class="card" style="display: none;">
+        <div class="card">
           <div class="card-header p-0">
             <button class="bg-transparent border-0 w-100 collapsed" type="button" data-toggle="collapse" data-target="#node-controls-shapes" aria-expanded="false" aria-controls="node-controls-shapes" style="color:#495057">Shapes and Sizes</button>
           </div>
@@ -156,7 +156,7 @@
             </div>
           </div>
         </div>
-        <div class="card" style="display: none;">
+        <div class="card">
           <div class="card-header p-0">
             <button class="bg-transparent border-0 w-100 launch-color-options collapsed" type="button" data-toggle="collapse" aria-expanded="false" style="color:#495057">Colors</button>
           </div>
@@ -190,7 +190,7 @@
             </div>
           </div>
         </div>
-        <div class="card" style="display: none;">
+        <div class="card">
           <div class="card-header p-0">
             <button class="bg-transparent border-0 w-100" type="button" data-toggle="collapse" data-target="#link-controls-shapes" aria-expanded="false" aria-controls="link-controls-shapes" style="color:#495057">Shapes and Sizes</button>
           </div>
@@ -242,7 +242,7 @@
             </div>
           </div>
         </div>
-        <div class="card" style="display: none;">
+        <div class="card">
           <div class="card-header p-0">
             <button class="bg-transparent border-0 w-100 launch-color-options" type="button" data-toggle="collapse" aria-expanded="false" style="color:#495057">Colors</button>
           </div>
@@ -274,7 +274,7 @@ Note that this may cause slow performance on larger networks.">
                   </div>
                 </div>
               </div>
-              <div style="display: none;" class="form-group row" title="Should MicrobeTrace Highlight a node's neighbors when you hover on it?">
+              <div class="form-group row" title="Should MicrobeTrace Highlight a node's neighbors when you hover on it?">
                 <div class="col-4">Gridlines</div>
                 <div class="col-8">
                   <div class="btn-group btn-group-toggle btn-group-sm w-100" data-toggle="buttons">
@@ -325,7 +325,7 @@ Note that this may cause slow performance on larger networks.">
             </div>
           </div>
         </div>
-        <div class="card" style="display: none;">
+        <div class="card">
           <div class="card-header p-0">
             <button class="bg-transparent border-0 w-100 launch-color-options collapsed" type="button" data-toggle="collapse" aria-expanded="false" style="color:#495057">Colors</button>
           </div>
