--- a/components/2d_network.html
+++ b/components/2d_network.html
@@ -187,6 +187,11 @@
                   </select>
                 </div>
               </div>
+              <div class="form-group row" title="How many decimals should the number labels have?">
+                <div class="col-4"><label for="link-decimal-variable">Decimal Length</label></div>
+                <div class="col-8"><input type="number" class="form-control form-control-sm" id="link-decimal-variable" min="0" step="1" max="6" value="2">
+                </div>
+              </div>  
             </div>
           </div>
         </div>
@@ -792,7 +797,7 @@ Note that this may cause slow performance on larger networks.">
         .join('text')
         .attr('text-anchor', 'middle')
         .attr('dy', settings['link-width'] + 2)
-        .text(l => l[settings['link-label-variable']]);
+        .text(l => (!l[settings['link-label-variable']] || l[settings['link-label-variable']].toLocaleString().indexOf('.') === -1) ? l[settings['link-label-variable']] : parseFloat((l[settings['link-label-variable']])).toFixed( settings['link-decimal-variable']));
 
       let layoutTick = () => {  
         nodes
@@ -1945,9 +1950,14 @@ Note that this may cause slow performance on larger networks.">
       if (label == 'None') {
         svg.select('g.links').selectAll('text').text('');
       } else {
-        svg.select('g.links').selectAll('text').data(getLLinks()).text(l => l[label]);
+        svg.select('g.links').selectAll('text').data(getLLinks()).text(l => l[label].toLocaleString().indexOf('.') === -1 ? l[label] : parseFloat((l[label])).toFixed( settings['link-decimal-variable']));
         force.alpha(0.01).alphaTarget(0).restart();
       }
+    });
+
+    $("#link-decimal-variable").on("change", function() {
+      session.style.widgets["link-decimal-variable"] = this.value;
+      svg.select('g.links').selectAll('text').data(getLLinks()).text(l => l[settings['link-label-variable']].toLocaleString().indexOf('.') === -1 ? l[settings['link-label-variable']] : parseFloat((l[settings['link-label-variable']])).toFixed( settings['link-decimal-variable']));
     });
 
     $('#link-length').on('input', function () {
