keep filtering thresholds when adding data

--- a/components/files.html
+++ b/components/files.html
@@ -757,16 +757,20 @@ Please note that this causes MicrobeTrace to store data on your computer's hard 
       $('#default-distance-metric').val(lsv);
       if (lsv == 'snps') {
         $('#ambiguities-row').slideUp();
-        $('#default-distance-threshold, #link-threshold')
+        if(!session.style.widgets['loaded']) {
+          $('#default-distance-threshold, #link-threshold')
           .attr('step', 1)
           .val(16);
-        session.style.widgets["link-threshold"] = 16;
+          session.style.widgets["link-threshold"] = 16;
+        }
       } else {
         $('#ambiguities-row').slideDown();
-        $('#default-distance-threshold, #link-threshold')
+        if(!session.style.widgets['loaded']) {
+          $('#default-distance-threshold, #link-threshold')
           .attr('step', 0.001)
           .val(0.015);
-        session.style.widgets["link-threshold"] = 0.015;
+          session.style.widgets["link-threshold"] = 0.015;
+        }
       }
       session.style.widgets['default-distance-metric'] = lsv;
     });
@@ -776,9 +780,13 @@ Please note that this causes MicrobeTrace to store data on your computer's hard 
     });
 
     localforage.getItem('default-distance-metric').then(cachedLSV => {
-      if (cachedLSV) {
+      if(session.style.widgets['loaded']) {
+        $('#default-distance-metric').val(session.style.widgets['default-distance-metric']).trigger('change');
+        $('#default-distance-threshold').val(session.style.widgets['link-threshold']).trigger('change');
+        $('#link-threshold').val(session.style.widgets['link-threshold']).trigger('change');
+      } else if (cachedLSV) {
         $('#default-distance-metric').val(cachedLSV).trigger('change');
-      }
+      } 
     });
 
     $('#ambiguity-resolution-strategy').on('change', function () {
